RM-8290 Fix WebButton alignment.
This change removes implicit word-wrap support from WebButton.

--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/WebButton.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/WebButton.css
@@ -18,13 +18,19 @@ input.webButton
 button.webButton span.buttonBody
 {
   display: inline-flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: center;
   box-sizing: border-box;
   padding: calc(var(--remotion-themed-spacing) / 2 - var(--remotion-themed-border-width)) var(--remotion-themed-spacing-large);
   gap: var(--remotion-themed-spacing);
   text-align: left;
-  vertical-align: middle;
+  width: inherit; /* required for text-overflow */
+}
+button.webButton span.buttonBody > span
+{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 button.webButton span.buttonBody > img
